[package]
name = "rust_rsa"
version = "0.1.0"
authors = ["Leonardo Razovic <leorazzo@gmail.com>"]
edition = "2018"

[dependencies]
glass_pumpkin = "1.0.0"
num-bigint = { version = "0.4.0", features = ["rand"] }
num-iter = "0.1.42"
num = "0.4.0"
rand = "0.8.3"
openssl = "0.10.34"

[profile.release]
lto = true
codegen-units = 1

